# jsk_dasl_src

./: README.md
jsk_dasl_src/: CMakeLists.txt  package.xml
src_dish_mockup/: CMakeLists.txt  package.xml
src_dish_mockup/config/: joints_trajectory_controller.yaml  pan_tilt.yaml  pan_tilt_controller.yaml
src_dish_mockup/firmware/src_dish_mockup/: src_dish_mockup.ino
src_dish_mockup/launch/: pan_tilt_bringup.launch  pan_tilt_controller.launch
src_dish_mockup/scripts/: dxl_client.py  pot_to_joint.py
src_hubo/: CMakeLists.txt  package.xml
src_hubo/launch/: hubo_empty_world.launch  hubo_sim_gazebo_sync.launch  spawn_urdf_model_from_robot_description.launch  unique.launch  unique_task1.launch  unique_task2.launch  unique_task3.launch
src_hubo/scripts/: delayed_roslaunch.sh
src_hubo/worlds/: unique.world
